--- a/index.html
+++ b/index.html
@@ -3,10 +3,165 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ryan McDuffie Films</title>
+    <title>Ryan McDuffie - Filmmaker Portfolio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+
+        header {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 20px;
+        }
+
+        header img {
+            max-width: 150px;
+        }
+
+        nav {
+            margin: 10px 0;
+        }
+
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 15px;
+            font-size: 18px;
+        }
+
+        .portfolio {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            gap: 20px;
+            padding: 20px;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .portfolio .project {
+            background: #fff;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            overflow: hidden;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        .portfolio img {
+            width: 100%;
+            height: auto;
+        }
+
+        .portfolio .project-title {
+            padding: 10px;
+            text-align: center;
+            font-size: 16px;
+            font-weight: bold;
+        }
+
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px;
+            margin-top: 20px;
+        }
+
+        footer a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to Ryan McDuffie's Portfolio</h1>
-    <p>This is my filmmaking portfolio site.</p>
+    <header>
+        <img src="images/logo_animated_v2.gif" alt="Ryan McDuffie's Animated Logo">
+        <img src="images/title_written2.jpg" alt="Ryan McDuffie Banner" style="max-width: 100%;">
+        <nav>
+            <a href="#portfolio">Portfolio</a>
+            <a href="#about">About</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
+
+    <section id="portfolio" class="portfolio">
+        <div class="project">
+            <img src="images/mcduffieplus_450v2.jpg" alt="McDuffie Plus">
+            <div class="project-title">McDuffie Plus (Patreon)</div>
+        </div>
+        <div class="project">
+            <img src="images/creativity_unleashed_450.jpg" alt="Creativity Unleashed">
+            <div class="project-title">Creativity Unleashed: Screenwriting in the AI Era (Book)</div>
+        </div>
+        <div class="project">
+            <img src="images/HYSM_V1_450.png" alt="Have You Seen Me?">
+            <div class="project-title">Have You Seen Me? (in production)</div>
+        </div>
+        <div class="project">
+            <img src="images/Smile2_450.jpg" alt="Smile">
+            <div class="project-title">Smile</div>
+        </div>
+        <div class="project">
+            <img src="images/Hi_450.jpg" alt="Hi!">
+            <div class="project-title">Hi!</div>
+        </div>
+        <div class="project">
+            <img src="images/TravelTimeWithTami_450.jpg" alt="Travel Time with Tami">
+            <div class="project-title">Travel Time with Tami</div>
+        </div>
+        <div class="project">
+            <img src="images/AsThyMothDothRothPOST_450.jpg" alt="As Thy Moth Doth Wroth">
+            <div class="project-title">As Thy Moth Doth Wroth</div>
+        </div>
+        <div class="project">
+            <img src="images/DisHorror_for_web_450.jpg" alt="Dismembering Horror">
+            <div class="project-title">Dismembering Horror (Podcast)</div>
+        </div>
+        <div class="project">
+            <img src="images/chebo_postpro_450.jpg" alt="The Chebo">
+            <div class="project-title">The Chebo</div>
+        </div>
+        <div class="project">
+            <img src="images/SHELTER_download.jpg" alt="Shelter from the Storm">
+            <div class="project-title">Shelter from the Storm</div>
+        </div>
+        <div class="project">
+            <img src="images/lovebound2_450.jpg" alt="Lovebound: Love Abounds">
+            <div class="project-title">Lovebound: Love Abounds</div>
+        </div>
+        <div class="project">
+            <img src="images/forestfalls2_450.jpg" alt="Forest Falls">
+            <div class="project-title">Forest Falls</div>
+        </div>
+        <div class="project">
+            <img src="images/kristy2_450.jpg" alt="The Kristy Corollary">
+            <div class="project-title">The Kristy Corollary</div>
+        </div>
+        <div class="project">
+            <img src="images/douche2_450.jpg" alt="Douche">
+            <div class="project-title">Douche</div>
+        </div>
+        <div class="project">
+            <img src="images/swimmingtime_450.jpg" alt="Swimming Time with Tami">
+            <div class="project-title">Swimming Time with Tami</div>
+        </div>
+    </section>
+
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Ryan is a filmmaker-as-explorer living in Hollywood.</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 Ryan McDuffie</p>
+        <a href="mailto:ryanmcduffie@gmail.com">Email</a>
+        <a href="https://instagram.com/mayormcduffie">Instagram</a>
+        <a href="https://youtube.com/ryanmcduffie">YouTube</a>
+    </footer>
 </body>
 </html>
