--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
 
         header {
-            background-color: #333;
+            background-color: #000;
             color: #fff;
             text-align: center;
             padding: 20px;
@@ -81,7 +81,10 @@
 <body>
     <header>
         <img src="images/logo_animated_v2.gif" alt="Ryan McDuffie's Animated Logo">
-        <img src="images/title_written2.jpg" alt="Ryan McDuffie Banner" style="max-width: 100%;">
+        <div style="text-align: center;">
+  <img src="images/title_written2.jpg" alt="Ryan McDuffie Banner" style="max-width: 100%;">
+  <img src="images/logo_animated_v2.gif" alt="Ryan McDuffie's Animated Logo" style="margin-top: 10px;">
+</div>
         <nav>
             <a href="#portfolio">Portfolio</a>
             <a href="#about">About</a>
