--- a/index.html
+++ b/index.html
@@ -3,168 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ryan McDuffie - Filmmaker Portfolio</title>
+    <title>Ryan McDuffie Portfolio</title>
     <style>
         body {
+            background-color: #fff;
+            color: #000;
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
         }
-
         header {
-            background-color: #000;
-            color: #fff;
+            background-color: #fff;
             text-align: center;
-            padding: 20px;
+            padding: 20px 0;
         }
-
-        header img {
-            max-width: 150px;
+        footer {
+            background-color: #fff;
+            text-align: center;
+            padding: 10px 0;
+            font-size: 14px;
         }
-
-        nav {
-            margin: 10px 0;
-        }
-
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            margin: 0 15px;
-            font-size: 18px;
-        }
-
         .portfolio {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             gap: 20px;
             padding: 20px;
             max-width: 1200px;
             margin: 0 auto;
         }
-
-        .portfolio .project {
-            background: #fff;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            overflow: hidden;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        .portfolio-item {
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            padding: 10px;
+            text-align: center;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
         }
-
-        .portfolio img {
-            width: 100%;
+        .portfolio-item img {
+            max-width: 100%;
             height: auto;
+            border-radius: 5px;
         }
-
-        .portfolio .project-title {
-            padding: 10px;
-            text-align: center;
-            font-size: 16px;
-            font-weight: bold;
+        .portfolio-item h3 {
+            margin: 10px 0 5px;
         }
-
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 10px;
-            margin-top: 20px;
+        .portfolio-item p {
+            margin: 0;
         }
-
-        footer a {
-            color: #fff;
-            text-decoration: none;
+        .links {
+            margin: 20px 0;
+        }
+        .links a {
             margin: 0 10px;
+            color: #000;
+            text-decoration: none;
+        }
+        .links a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
     <header>
-        <img src="images/logo_animated_v2.gif" alt="Ryan McDuffie's Animated Logo">
         <div style="text-align: center;">
-  <img src="images/title_written2.jpg" alt="Ryan McDuffie Banner" style="max-width: 100%;">
-  <img src="images/logo_animated_v2.gif" alt="Ryan McDuffie's Animated Logo" style="margin-top: 10px;">
-</div>
-        <nav>
-            <a href="#portfolio">Portfolio</a>
-            <a href="#about">About</a>
-            <a href="#contact">Contact</a>
-        </nav>
+            <img src="images/title_written2.jpg" alt="Ryan McDuffie Banner" style="max-width: 100%;">
+            <img src="images/logo_animated_v2.gif" alt="Ryan McDuffie's Animated Logo" style="margin-top: 10px;">
+        </div>
     </header>
-
-    <section id="portfolio" class="portfolio">
-        <div class="project">
-            <img src="images/mcduffieplus_450v2.jpg" alt="McDuffie Plus">
-            <div class="project-title">McDuffie Plus (Patreon)</div>
-        </div>
-        <div class="project">
-            <img src="images/creativity_unleashed_450.jpg" alt="Creativity Unleashed">
-            <div class="project-title">Creativity Unleashed: Screenwriting in the AI Era (Book)</div>
-        </div>
-        <div class="project">
-            <img src="images/HYSM_V1_450.png" alt="Have You Seen Me?">
-            <div class="project-title">Have You Seen Me? (in production)</div>
-        </div>
-        <div class="project">
-            <img src="images/Smile2_450.jpg" alt="Smile">
-            <div class="project-title">Smile</div>
-        </div>
-        <div class="project">
-            <img src="images/Hi_450.jpg" alt="Hi!">
-            <div class="project-title">Hi!</div>
-        </div>
-        <div class="project">
-            <img src="images/TravelTimeWithTami_450.jpg" alt="Travel Time with Tami">
-            <div class="project-title">Travel Time with Tami</div>
-        </div>
-        <div class="project">
-            <img src="images/AsThyMothDothRothPOST_450.jpg" alt="As Thy Moth Doth Wroth">
-            <div class="project-title">As Thy Moth Doth Wroth</div>
-        </div>
-        <div class="project">
-            <img src="images/DisHorror_for_web_450.jpg" alt="Dismembering Horror">
-            <div class="project-title">Dismembering Horror (Podcast)</div>
-        </div>
-        <div class="project">
-            <img src="images/chebo_postpro_450.jpg" alt="The Chebo">
-            <div class="project-title">The Chebo</div>
-        </div>
-        <div class="project">
-            <img src="images/SHELTER_download.jpg" alt="Shelter from the Storm">
-            <div class="project-title">Shelter from the Storm</div>
-        </div>
-        <div class="project">
-            <img src="images/lovebound2_450.jpg" alt="Lovebound: Love Abounds">
-            <div class="project-title">Lovebound: Love Abounds</div>
-        </div>
-        <div class="project">
-            <img src="images/forestfalls2_450.jpg" alt="Forest Falls">
-            <div class="project-title">Forest Falls</div>
-        </div>
-        <div class="project">
-            <img src="images/kristy2_450.jpg" alt="The Kristy Corollary">
-            <div class="project-title">The Kristy Corollary</div>
-        </div>
-        <div class="project">
-            <img src="images/douche2_450.jpg" alt="Douche">
-            <div class="project-title">Douche</div>
-        </div>
-        <div class="project">
-            <img src="images/swimmingtime_450.jpg" alt="Swimming Time with Tami">
-            <div class="project-title">Swimming Time with Tami</div>
-        </div>
-    </section>
-
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Ryan is a filmmaker-as-explorer living in Hollywood.</p>
-    </section>
-
+    <main>
+        <section class="portfolio">
+            <!-- Portfolio items go here -->
+        </section>
+    </main>
     <footer>
+        <div class="links">
+            <a href="mailto:ryanmcduffie@gmail.com">Email</a>
+            <a href="https://instagram.com/mayormcduffie">Instagram</a>
+            <a href="#">YouTube</a>
+        </div>
         <p>&copy; 2025 Ryan McDuffie</p>
-        <a href="mailto:ryanmcduffie@gmail.com">Email</a>
-        <a href="https://instagram.com/mayormcduffie">Instagram</a>
-        <a href="https://youtube.com/ryanmcduffie">YouTube</a>
     </footer>
 </body>
 </html>
