--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <h3>Have You Seen Me? (in production)</h3>
             </div>
             <div class="portfolio-item">
-                <img src="images/smile2_450.jpg" alt="Smile">
+                <img src="images/Smile2_450.jpg" alt="Smile">
                 <h3>Smile</h3>
             </div>
             <div class="portfolio-item">
