--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             background-color: #fff;
             color: #000;
-            font-family: Arial, sans-serif;
+            font-family: "Georgia", serif;
             margin: 0;
             padding: 0;
         }
@@ -72,19 +72,19 @@
     <main>
         <section class="portfolio">
             <div class="portfolio-item">
-                <img src="images/mcduffieplus_450v2.jpg" alt="McDuffie Plus">
-                <h3>McDuffie Plus (Patreon)</h3>
+                <img src="images/HYSM_v1_450.png" alt="Have You Seen Me?">
+                <h3>Have You Seen Me? (in production)</h3>
             </div>
             <div class="portfolio-item">
                 <img src="images/creativity_unleashed_450.jpg" alt="Creativity Unleashed">
                 <h3>Creativity Unleashed: Screenwriting in the AI Era (Book)</h3>
             </div>
             <div class="portfolio-item">
-                <img src="images/HYSM_v1_450.png" alt="Have You Seen Me?">
-                <h3>Have You Seen Me? (in production)</h3>
+                <img src="images/mcduffieplus_450v2.jpg" alt="McDuffie Plus">
+                <h3>McDuffie Plus (Patreon)</h3>
             </div>
             <div class="portfolio-item">
-                <img src="images/Smile2_450.jpg" alt="Smile">
+                <img src="images/smile2_450.jpg" alt="Smile">
                 <h3>Smile</h3>
             </div>
             <div class="portfolio-item">
