--- a/index.html
+++ b/index.html
@@ -38,14 +38,15 @@
             box-shadow: none;
             padding: 0;
         }
-        .portfolio-item h3 {
-            font-weight: normal;
-            margin: 0 0 10px 0;
-        }
         .portfolio-item img {
             max-width: 100%;
             height: auto;
             border-radius: 5px;
+        }
+        .portfolio-item h3 {
+            font-weight: normal;
+            font-size: 16px; /* Adjust as needed */
+            margin: 10px 0 0 0;
         }
         .links {
             margin: 20px 0;
@@ -70,64 +71,64 @@
     <main>
         <section class="portfolio">
             <div class="portfolio-item">
-                <h3>Have You Seen Me? (in production)</h3>
                 <img src="images/HYSM_v1_450.png" alt="Have You Seen Me?">
+                <h3>Have You Seen Me? (in production)</h3>
             </div>
             <div class="portfolio-item">
-                <h3>Creativity Unleashed: Screenwriting in the AI Era (Book)</h3>
                 <img src="images/creativity_unleashed_450.jpg" alt="Creativity Unleashed">
+                <h3>Creativity Unleashed: Screenwriting in the AI Era (Book)</h3>
             </div>
             <div class="portfolio-item">
-                <h3>McDuffie Plus (Patreon)</h3>
                 <img src="images/mcduffieplus_450v2.jpg" alt="McDuffie Plus">
+                <h3>McDuffie Plus (Patreon)</h3>
             </div>
             <div class="portfolio-item">
+                <img src="images/smile2_450.jpg" alt="Smile">
                 <h3>Smile</h3>
-                <img src="images/Smile2_450.jpg" alt="Smile">
             </div>
             <div class="portfolio-item">
-                <h3>Hi!</h3>
                 <img src="images/Hi_450.jpg" alt="Hi!">
+                <h3>Hi!</h3>
             </div>
             <div class="portfolio-item">
-                <h3>Travel Time with Tami</h3>
                 <img src="images/TravelTimeWithTami_450.jpg" alt="Travel Time with Tami">
+                <h3>Travel Time with Tami</h3>
             </div>
             <div class="portfolio-item">
-                <h3>As Thy Moth Doth Wroth</h3>
                 <img src="images/AsThyMothDothRothV1_450.jpg" alt="As Thy Moth Doth Wroth">
+                <h3>As Thy Moth Doth Wroth</h3>
             </div>
             <div class="portfolio-item">
-                <h3>Dismembering Horror (Podcast)</h3>
                 <img src="images/DisHorror_for_web_450.jpg" alt="Dismembering Horror">
+                <h3>Dismembering Horror (Podcast)</h3>
             </div>
             <div class="portfolio-item">
-                <h3>The Chebo</h3>
                 <img src="images/chebo_450.jpg" alt="The Chebo">
+                <h3>The Chebo</h3>
             </div>
             <div class="portfolio-item">
-                <h3>Shelter from the Storm</h3>
                 <img src="images/shelter_450.jpg" alt="Shelter from the Storm">
+                <h3>Shelter from the Storm</h3>
             </div>
             <div class="portfolio-item">
-                <h3>Lovebound: Love Abounds</h3>
                 <img src="images/lovebound2_450.jpg" alt="Lovebound: Love Abounds">
+                <h3>Lovebound: Love Abounds</h3>
             </div>
             <div class="portfolio-item">
-                <h3>Forest Falls</h3>
                 <img src="images/forestfalls2_450.jpg" alt="Forest Falls">
+                <h3>Forest Falls</h3>
             </div>
             <div class="portfolio-item">
-                <h3>The Kristy Corollary</h3>
                 <img src="images/kristy2_450.jpg" alt="The Kristy Corollary">
+                <h3>The Kristy Corollary</h3>
             </div>
             <div class="portfolio-item">
-                <h3>Douche</h3>
                 <img src="images/douche4_450.jpg" alt="Douche">
+                <h3>Douche</h3>
             </div>
             <div class="portfolio-item">
-                <h3>Swimming Time with Tami</h3>
                 <img src="images/swimmingtime_450.jpg" alt="Swimming Time with Tami">
+                <h3>Swimming Time with Tami</h3>
             </div>
         </section>
     </main>
