--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
             padding: 0;
         }
         header {
-            background-color: #fff;
             text-align: center;
             padding: 20px 0;
         }
         footer {
-            background-color: #fff;
             text-align: center;
             padding: 10px 0;
             font-size: 14px;
@@ -85,7 +83,7 @@
             text-align: center;
         }
         .about-image img {
-            max-width: 100%;
+            width: 50%; /* Change to max-width: 300px if you’d prefer a fixed size */
             height: auto;
             border-radius: 5px;
         }
@@ -161,7 +159,7 @@
                 <h3>Swimming Time with Tami</h3>
             </div>
         </section>
-        
+
         <!-- About Me Section -->
         <section class="about-me">
             <div class="about-text">
