--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
     <!-- About Me Section -->
     <section class="about-me">
-      <p>Ryan is a filmmaker-explorer living in Hollywood.</p>
+      <p>Ryan is an explorer via filmmaking.</p>
       <img src="images/ryan_image1.jpg" alt="Ryan's Photo">
     </section>
   </main>
