--- a/index.html
+++ b/index.html
@@ -88,6 +88,14 @@
       margin: 10px 0 0 0;
     }
 
+    .portfolio-item a {
+      text-decoration: none;
+      color: #000;
+    }
+    .portfolio-item a:hover {
+      text-decoration: underline;
+    }
+
     /*************
      * ABOUT ME
      *************/
@@ -136,70 +144,100 @@
   <main>
     <section class="portfolio">
       <div class="portfolio-item">
-        <img src="images/HYSM_v1_450.png" alt="Have You Seen Me?">
-        <h3>Have You Seen Me? (in production)</h3>
+        <a href="#" target="_blank">
+          <img src="images/HYSM_v1_450.png" alt="Have You Seen Me?">
+          <h3>Have You Seen Me? (in production)</h3>
+        </a>
       </div>
       <div class="portfolio-item">
-        <img src="images/creativity_unleashed_450.jpg" alt="Creativity Unleashed">
-        <h3>Creativity Unleashed: Screenwriting in the AI Era (Book)</h3>
+        <a href="https://www.amazon.com/Creativity-Unleashed-Screenwriting-AI-Era/dp/B0CVLTPCM3" target="_blank">
+          <img src="images/creativity_unleashed_450.jpg" alt="Creativity Unleashed">
+          <h3>Creativity Unleashed: Screenwriting in the AI Era (Book)</h3>
+        </a>
       </div>
       <div class="portfolio-item">
-        <img src="images/mcduffieplus_450v2.jpg" alt="McDuffie Plus">
-        <h3>McDuffie Plus (Patreon)</h3>
+        <a href="https://www.patreon.com/c/mcduffieplus" target="_blank">
+          <img src="images/mcduffieplus_450v2.jpg" alt="McDuffie Plus">
+          <h3>McDuffie Plus (Patreon)</h3>
+        </a>
       </div>
       <div class="portfolio-item">
-        <img src="images/smile2_450.jpg" alt="Smile">
-        <h3>Smile</h3>
+        <a href="https://www.youtube.com/watch?v=70JcWRDsGTg" target="_blank">
+          <img src="images/smile2_450.jpg" alt="Smile">
+          <h3>Smile</h3>
+        </a>
       </div>
       <div class="portfolio-item">
-        <img src="images/Hi_450.jpg" alt="Hi!">
-        <h3>Hi!</h3>
+        <a href="https://www.youtube.com/watch?v=Lu3SOrsxiqc" target="_blank">
+          <img src="images/Hi_450.jpg" alt="Hi!">
+          <h3>Hi!</h3>
+        </a>
       </div>
       <div class="portfolio-item">
-        <img src="images/TravelTimeWithTami_450.jpg" alt="Travel Time with Tami">
-        <h3>Travel Time with Tami</h3>
+        <a href="https://www.youtube.com/watch?v=VueEcHNt85I" target="_blank">
+          <img src="images/TravelTimeWithTami_450.jpg" alt="Travel Time with Tami">
+          <h3>Travel Time with Tami</h3>
+        </a>
       </div>
       <div class="portfolio-item">
-        <img src="images/AsThyMothDothRothV1_450.jpg" alt="As Thy Moth Doth Wroth">
-        <h3>As Thy Moth Doth Wroth</h3>
+        <a href="https://www.youtube.com/watch?v=q7kA9YIudlU" target="_blank">
+          <img src="images/AsThyMothDothRothV1_450.jpg" alt="As Thy Moth Doth Wroth">
+          <h3>As Thy Moth Doth Wroth</h3>
+        </a>
       </div>
       <div class="portfolio-item">
-        <img src="images/DisHorror_for_web_450.jpg" alt="Dismembering Horror">
-        <h3>Dismembering Horror (Podcast)</h3>
+        <a href="https://www.youtube.com/@DismemberingHorror" target="_blank">
+          <img src="images/DisHorror_for_web_450.jpg" alt="Dismembering Horror">
+          <h3>Dismembering Horror (Podcast)</h3>
+        </a>
       </div>
       <div class="portfolio-item">
-        <img src="images/chebo_450.jpg" alt="The Chebo">
-        <h3>The Chebo</h3>
+        <a href="https://www.youtube.com/watch?v=yP5MZxgJCdE" target="_blank">
+          <img src="images/chebo_450.jpg" alt="The Chebo">
+          <h3>The Chebo</h3>
+        </a>
       </div>
       <div class="portfolio-item">
-        <img src="images/shelter_450.jpg" alt="Shelter from the Storm">
-        <h3>Shelter from the Storm</h3>
+        <a href="https://drive.google.com/file/d/1l55GNmGvI_sZ0RU_dyRUts0KkMN1Ow_T/view?usp=sharing" target="_blank">
+          <img src="images/shelter_450.jpg" alt="Shelter from the Storm">
+          <h3>Shelter from the Storm</h3>
+        </a>
       </div>
       <div class="portfolio-item">
-        <img src="images/lovebound2_450.jpg" alt="Lovebound: Love Abounds">
-        <h3>Lovebound: Love Abounds</h3>
+        <a href="https://www.youtube.com/watch?v=Omw2YGHKnY8" target="_blank">
+          <img src="images/lovebound2_450.jpg" alt="Lovebound: Love Abounds">
+          <h3>Lovebound: Love Abounds</h3>
+        </a>
       </div>
       <div class="portfolio-item">
-        <img src="images/forestfalls2_450.jpg" alt="Forest Falls">
-        <h3>Forest Falls</h3>
+        <a href="https://www.youtube.com/watch?v=9hxcuU-y_MQ" target="_blank">
+          <img src="images/forestfalls2_450.jpg" alt="Forest Falls">
+          <h3>Forest Falls</h3>
+        </a>
       </div>
       <div class="portfolio-item">
-        <img src="images/kristy2_450.jpg" alt="The Kristy Corollary">
-        <h3>The Kristy Corollary</h3>
+        <a href="https://www.youtube.com/watch?v=2CLIyoXyVqk" target="_blank">
+          <img src="images/kristy2_450.jpg" alt="The Kristy Corollary">
+          <h3>The Kristy Corollary</h3>
+        </a>
       </div>
       <div class="portfolio-item">
-        <img src="images/douche4_450.jpg" alt="Douche">
-        <h3>Douche</h3>
+        <a href="#" target="_blank">
+          <img src="images/douche4_450.jpg" alt="Douche">
+          <h3>Douche</h3>
+        </a>
       </div>
       <div class="portfolio-item">
-        <img src="images/swimmingtime_450.jpg" alt="Swimming Time with Tami">
-        <h3>Swimming Time with Tami</h3>
+        <a href="https://vimeo.com/19917156" target="_blank">
+          <img src="images/swimmingtime_450.jpg" alt="Swimming Time with Tami">
+          <h3>Swimming Time with Tami</h3>
+        </a>
       </div>
     </section>
 
     <!-- About Me Section -->
     <section class="about-me">
-      <p>Ryan is an explorer via filmmaking.</p>
+      <p>Ryan is an explorer the unified field, via filmmaking.</p>
       <img src="images/ryan_image1.jpg" alt="Ryan's Photo">
     </section>
   </main>
