--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     }
     /* Animated doodle/logo */
     .header-logo {
-      max-width: 250px;
+      max-width: 300px;
       margin-top: 10px;
     }
 
@@ -237,7 +237,7 @@
 
     <!-- About Me Section -->
     <section class="about-me">
-      <p>Ryan is an explorer the unified field, via filmmaking.</p>
+      <p>Ryan is an explorer of the unified field, via filmmaking.</p>
       <img src="images/ryan_image1.jpg" alt="Ryan's Photo">
     </section>
   </main>
@@ -246,7 +246,7 @@
     <div class="links">
       <a href="mailto:ryanmcduffie@gmail.com">Email</a>
       <a href="https://instagram.com/mayormcduffie">Instagram</a>
-      <a href="#">YouTube</a>
+      <a href="https://www.youtube.com/channel/UCgAons2XW0D_rHQH4LnziVA">YouTube</a>
     </div>
     <p>&copy; 2025 Ryan McDuffie</p>
   </footer>
